# nexus-extensions

./: Cargo.toml  extension.json
.github/workflows/: ci.yml  release.yml
codebase-indexer/: Cargo.toml  manifest.json
codebase-indexer/extension/src/: main.rs
codebase-indexer/src/: embeddings.rs  graph.rs  indexer.rs  languages.rs  ops.rs  search.rs  state.rs
extension/: manifest.json
src/: main.rs
webhook-receiver/: extension.json
webhook-receiver/.github/workflows/: release.yml
webhook-receiver/src/: http_server.rs  main.rs  store.rs  types.rs  verification.rs
