[package]
name = "nexus-webhook-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
