[package]
name = "codebase-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Vector DB
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"

# AST parsing
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"

# Git
git2 = { version = "0.19", default-features = false }

# HTTP (Ollama provider)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# AWS (Bedrock provider)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
anyhow = "1"
